--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "test": "mocha ./**/*.test.js --timeout 10000",
     "ts": "tsc -w",
     "server": "nodemon ./build/index.js",
     "start": "tsc && node ./build/index.js"
@@ -12,6 +13,7 @@
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
     "cors": "^2.8.4",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "helmet": "^3.9.0",
     "mongoose": "^4.13.4",
@@ -21,6 +23,9 @@
   "devDependencies": {
     "@types/express": "^4.0.39",
     "@types/mongoose": "^4.7.27",
-    "@types/node": "^8.0.53"
+    "@types/node": "^8.0.53",
+    "chai": "^4.1.2",
+    "request": "^2.83.0",
+    "should": "^13.1.3"
   }
 }
